# syt_ek962_security_concepts

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Recherche.md  docker-compose.yml
prompts/: claude.md  claude_tests.md  docker_helper.md  frontend_claude.md  google-oauth.md  help_with_deployment.md  plan_google_implementation.md  testing.md
src/: config.rs  error.rs  lib.rs  main.rs
src/auth/: google.rs  jwt.rs  ldap.rs  mod.rs  password.rs  provider.rs
src/handlers/: auth.rs  mod.rs  oauth.rs
src/models/: mod.rs  user.rs
src/repository/: mod.rs  sqlite.rs  traits.rs
static/: index.html
tests/: api_integration_tests.rs  auth_provider_tests.rs  repository_tests.rs
tests/common/: mod.rs
