[package]
name = "syt_ek962_security_concepts"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
hex = "0.4"

# OAuth 2.0
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
